Migrando vscode